--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,3 +1,46 @@
-site_name: My Docs
+site_name: CodeWizardsHQ Documentation
+# Set this whenever it's live
+# site_url: 
+
+plugins:
+  - search # enabled by default, but needs to be added if anymore are added
+#extra_css:
+#    - stylesheets/extra.css  
+
+# Footer config
+copyright: Copyright &copy; 2016 - 2021 CodeWizardsHQ
+extra:
+  # Removes the "Made with MkDocs" from the footer
+  generator: false
+
+# GitHub Repo config
+repo_url: https://github.com/daniel-schroeder-dev/cwhq-docs
+repo_name: cwhq-docs
+edit_uri: edit/main/docs
+
+nav:
+  - Home: index.md
+  - Python: python.md
+
+
 theme:
   name: material
+  features:
+    # Turns into an SPA basically
+    - navigation.instant
+    - search.suggest
+  favicon: assets/favicon.ico
+  # logo: assets/logo.png
+  palette:
+    - media: "(prefers-color-scheme: light)"
+      scheme: default
+      toggle:
+        icon: material/toggle-switch-off-outline
+        name: Switch to dark mode
+    - media: "(prefers-color-scheme: dark)"
+      scheme: slate 
+      primary: amber # remove to get CWHQ colors from extra.css
+      toggle:
+        icon: material/toggle-switch
+        name: Switch to light mode
+
