--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -25,6 +25,13 @@ nav:
     - 'Wizardlib': python/wizardlib.md
 
 
+markdown_extensions:
+  - pymdownx.highlight
+  - pymdownx.inlinehilite
+  - pymdownx.superfences
+  - pymdownx.snippets
+
+
 theme:
   name: material
   features:
