Add some Python documentation.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -30,6 +30,9 @@ markdown_extensions:
   - pymdownx.inlinehilite
   - pymdownx.superfences
   - pymdownx.snippets
+  - attr_list
+  - md_in_html
+  - tables
 
 
 theme:
