--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -44,15 +44,12 @@ theme:
   favicon: assets/favicon.ico
   # logo: assets/logo.png
   palette:
-    - media: "(prefers-color-scheme: light)"
-      scheme: default
-      toggle:
-        icon: material/toggle-switch-off-outline
-        name: Switch to dark mode
-    - media: "(prefers-color-scheme: dark)"
-      scheme: slate 
-      primary: amber # remove to get CWHQ colors from extra.css
-      toggle:
-        icon: material/toggle-switch
-        name: Switch to light mode
+    # - media: "(prefers-color-scheme: light)"
+    #   scheme: default
+    #   toggle:
+    #     icon: material/toggle-switch-off-outline
+    #     name: Switch to dark mode
+    # - media: "(prefers-color-scheme: dark)"
+    scheme: slate 
+    primary: amber # remove to get CWHQ colors from extra.css
 
